JAD-18894 Handle markup edge case (adjacent text nodes)